// This Source Code Form is subject to the terms of the GNU GPL-3.0 License.
// If a copy of the GPL-3.0 was not distributed with this file, You can obtain one at https://www.gnu.org/licenses/gpl-3.0.en.html.
// Copyright (C) 2022 Leszek Pomianowski.
// All Rights Reserved.

syntax = "proto3";

option csharp_namespace = "GeniusProtocol";

package GeniusProtocol;

service Solver {
	rpc Ask(SolverQuestion) returns (SolverResponse);
}

message SolverQuestion {
	int32 system_id = 1;
	bool multiple = 2;
	repeated int32 confirming = 3;
	repeated int32 negating = 4;
	repeated int32 indifferent = 5;
}

message SolverResponse {
	int32 system_id = 1;
	bool is_solved = 2;
	bool multiple = 3;
	int32 status = 4;
	int32 next_condition = 5;
	repeated int32 products = 6;
}